--- a/public/assets/web/ASSets_Ar/css/style.css
+++ b/public/assets/web/ASSets_Ar/css/style.css
@@ -13156,16 +13156,17 @@ a:hover span {
 
 .dropdown-cart .items .item .itemInfo .info .title {
   color: #000;
-    font-size: 12px !important;
-    text-align: right;
-    text-transform: capitalize;
-    font-weight: 500;
-    font-family: Cairo;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  font-size: 12px !important;
+  text-align: right;
+  text-transform: capitalize;
+  font-weight: 500;
+  font-family: Cairo;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .dropdown-cart .items .item .itemInfo .info .cat {
@@ -13263,6 +13264,23 @@ a:hover span {
   padding: 20px 40px;
   gap: 30px;
 }
+
+@media (max-width: 820px) {
+  .account-content {
+    flex-direction: column;
+    padding: 20px 10px;
+  }
+
+  .account-content > div {
+    width: 100% !important;
+  }
+
+  .account-wrapper .account-body {
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 
 .account-container {
   width: 270px;
@@ -13377,6 +13395,62 @@ a:hover span {
   width: 100%;
   height: 0px;
   border-bottom: 1px #e9e9e9 solid;
+}
+
+/* logout modal */
+.account-content .modal {
+  .modal-dialog {
+    top: 25%;
+
+    .modal-content {
+      border-radius: 12px;
+
+      h5 {
+        text-align: center;
+        padding: 30px 0;
+        font-family: Poppins;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 36px;
+        color: #000;
+      }
+
+      .modal-footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        border: none;
+        padding: 30px;
+        flex-direction: row;
+        width: 100%;
+
+        button {
+          width: 50%;
+          max-width: 200px;
+          padding: 10px 0;
+          border-radius: 8px;
+          font-family: Poppins;
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 37.5px;
+          text-align: center;
+        }
+
+        button:nth-child(1) {
+          background-color: #c70606;
+          color: #fff;
+          box-shadow: 0px 3px 4px 0px #00000008;
+        }
+
+        button:nth-child(2) {
+          color: #000;
+          border: 1px solid #f1f1f2;
+          box-shadow: 0px 3px 4px 0px #00000014;
+        }
+      }
+    }
+  }
 }
 
 /* //////////////////////////////////////////////////// */
@@ -13564,6 +13638,24 @@ a:hover span {
   }
 }
 
+@media (max-width: 900px) {
+  .profile-container {
+    .inputs-container {
+      justify-content: center;
+
+      .input-content {
+        width: 100%;
+        max-width: 450px;
+      }
+    }
+
+    .account-button {
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
 /* ///////////////////////////////////////// */
 /* account address page*/
 .address-contaier {
@@ -13597,7 +13689,6 @@ a:hover span {
         gap: 20px;
 
         .icon-container {
-          width: 24px;
           height: 24px;
           display: inline-flex;
           justify-content: center;
@@ -13705,11 +13796,26 @@ a:hover span {
           cursor: pointer;
 
           .change-location-text {
+            text-align: center;
+            width: 100%;
             color: white;
-            font-size: 20px;
+            font-size: 17px;
             font-family: Cairo;
             font-weight: 500;
             line-height: 20px;
+            text-wrap: nowrap;
+          }
+
+          @media(max-width:900px){
+            .change-location-text{
+              font-size: 14px;
+            }
+          }
+
+          @media(max-width:450px){
+            .change-location-text{
+              font-size: 12px;
+            }
           }
         }
 
@@ -13720,7 +13826,6 @@ a:hover span {
           display: inline-flex;
           justify-content: center;
           align-items: center;
-          margin-left: 2em;
 
           .badge-text {
             text-align: center;
@@ -13730,6 +13835,12 @@ a:hover span {
             font-weight: 600;
             line-height: 18px;
           }
+        }
+      }
+
+      @media(max-width:900px){
+        .right{
+          gap: 10px;
         }
       }
 
@@ -13752,17 +13863,45 @@ a:hover span {
             font-family: Cairo;
             font-weight: 700;
             line-height: 20px;
+            text-wrap: nowrap;
           }
 
           .delivery-address {
-            display: inline-flex;
-            justify-content: flex-start;
-            align-items: flex-end;
             color: black;
             font-size: 15px;
             font-family: Cairo;
             font-weight: 500;
             line-height: 20px;
+            white-space: break-spaces;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            text-align: right;
+            padding-left: 5px;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            line-clamp: 2 ;
+            -webkit-box-orient: vertical;
+            box-orient: vertical;
+          }
+
+          @media(max-width:900px){
+            .delivery-title {
+              font-size: 15px;
+            }
+
+            .delivery-address{
+              font-size: 13px;
+            }
+          }
+
+          @media(max-width:450px){
+            .delivery-title {
+              font-size: 13px;
+            }
+
+            .delivery-address{
+              font-size: 10px;
+            }
           }
         }
 
@@ -13773,6 +13912,26 @@ a:hover span {
           display: flex;
           align-items: center;
           justify-content: center;
+
+          @media(max-width: 800px){
+            svg{
+              width: 28px !important;
+              height: 28px !important;
+            }
+          }
+
+          @media(max-width: 450px){
+            svg{
+              width: 23px !important;
+              height: 23px !important;
+            }
+          }
+        }
+      }
+
+      @media(max-width:900px){
+        .left{
+          gap: 10px;
         }
       }
     }
@@ -13902,12 +14061,19 @@ a:hover span {
             }
           }
         }
+
+        @media(max-width: 930px){
+          .input-content{
+            width: 100%;
+            max-width: 100%;
+          }
+        }
       }
     }
 
     .checks-container {
       display: flex;
-      align-items:center;
+      align-items: center;
       justify-content: flex-start;
       flex-wrap: wrap;
       flex-direction: row;
@@ -13960,6 +14126,12 @@ a:hover span {
       margin: 0 auto;
       margin-top: 30px;
       direction: ltr;
+
+      @media(max-width: 920px){
+        button{
+          margin: 0 auto;
+        }
+      }
     }
   }
 
@@ -13973,3 +14145,365 @@ a:hover span {
     opacity: 0;
   }
 }
+
+/* //////////////////////////////////////// */
+/* account download page */
+.account-dwonload-container {
+  display: grid;
+  width: calc(100% - 300px);
+  grid-template-columns: repeat(auto-fit, minmax(335px, 1fr));
+  gap: 20px;
+
+  .product-container {
+    width: 100%;
+    border-radius: 12px;
+    border: 1px #f1f1f2 solid;
+    background: white;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.03);
+    position: relative;
+    padding: 10px 7px;
+    cursor: pointer;
+
+    .product-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 48%,
+        #fd9636 100%
+      );
+      box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.03);
+      border-radius: 12px;
+
+      .view,
+      .add-to-cart {
+        display: none;
+      }
+    }
+
+    .product-image {
+      width: 100%;
+      border-radius: 12px;
+    }
+
+    .product-info {
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex-direction: column;
+      bottom: 16px;
+      right: 18px;
+      position: absolute;
+
+      .product-title {
+        color: white;
+        font-size: 12px;
+        font-family: Poppins;
+        font-weight: 500;
+        word-wrap: break-word;
+      }
+
+      .product-category {
+        color: #fdfdfd;
+        font-size: 12px;
+        font-family: Poppins;
+        font-weight: 400;
+        word-wrap: break-word;
+      }
+    }
+  }
+
+  .product-container:hover {
+    padding: 0;
+    transition: all 0.3s ease;
+
+    .product-overlay {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 15px;
+
+      .view,
+      .add-to-cart {
+        display: block;
+        border: none;
+        outline: none;
+        text-align: center;
+        border-radius: 5px;
+        font-size: 15px;
+        padding: 10px;
+        width: 50%;
+        margin: 0 auto;
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      .view {
+        color: white;
+        background-color: #0e224d;
+      }
+
+      .add-to-cart {
+        background-color: white;
+        border: 1px solid #0e224d;
+      }
+    }
+
+    .product-image {
+      height: 100%;
+    }
+
+    .product-info {
+      display: none;
+    }
+  }
+}
+
+/* ////////////////////////////////////////////////// */
+/* account orders page */
+.account-orders-container {
+  width: calc(100% - 300px);
+
+  .orders-table {
+    width: 100%;
+    border: 1px solid #f1f1f2;
+
+    thead {
+      tr {
+        th {
+          padding: 30px 0;
+          text-align: center;
+          font-family: Poppins;
+          font-size: 18px;
+          font-weight: 500;
+          line-height: 30px;
+          letter-spacing: 0.5px;
+          color: #0e224d;
+        }
+
+        @media(max-width: 1000px){
+          th{
+            padding: 10px 0;
+            font-size: 14px;
+
+          }
+        }
+
+        @media(max-width: 500px){
+          th{
+            padding: 5px 0;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+
+    tbody {
+      border-top: 1px solid #f1f1f2;
+      tr {
+        position: relative;
+        td {
+          align-items: center;
+          vertical-align: middle;
+          padding: 20px;
+
+          .images-container {
+            width: 135px;
+            height: 135px;
+            padding: 2px;
+            display: grid;
+            place-items: center;
+            overflow: hidden;
+            gap: 5px;
+
+            img {
+              width: 100%;
+              height: 100%;
+              border: 0.5px solid #f1f1f2;
+              border-radius: 8px;
+              object-fit: cover;
+            }
+
+            img.small {
+              width: 100%;
+              height: 50%;
+            }
+
+            img.extra {
+              width: 100%;
+              height: 100%;
+            }
+          }
+
+          @media(max-width:1100px){
+            .images-container{
+              width: 100px;
+              height: 100px;
+            }
+          }
+
+          @media(max-width:500px){
+            .images-container{
+              width: 70px;
+              height: 70px;
+            }
+          }
+
+          .two-images, .three-images {
+            grid-template-columns: 1fr 1fr;
+            vertical-align: middle;
+          }
+
+          .three-images .image-wrapper:last-child{
+            display: none;
+          }
+          
+          
+          .four-images {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+          }
+
+          .image-wrapper{
+            position: relative;
+          }
+          
+          .three-images .image-wrapper:nth-child(2)::before,
+          .four-images .image-wrapper:nth-child(4)::before{
+            content: "+1";
+            color: #fff;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background-color: #8580769c;
+            background: transparent;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            font-weight: bold;
+          }
+
+          .order-number,
+          .oreder-date,
+          .order-status,
+          .order-total {
+            font-family: Poppins;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 30px;
+            letter-spacing: 0.5px;
+            text-align: center;
+            color: #000000;
+          }
+
+          .order-total {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            span:nth-child(2) {
+              color: #939393;
+              font-size: 15px;
+              line-height: 27px;
+            }
+          }
+
+          .custom-button {
+            width: 150px;
+            padding: 7px;
+            background: #fd9636;
+            border-radius: 8px;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            cursor: pointer;
+
+            .custom-button-text {
+              color: white;
+              font-size: 18px;
+              font-family: Poppins;
+              font-weight: 500;
+              text-transform: uppercase;
+              line-height: 30px;
+              letter-spacing: 0.5px;
+              word-wrap: break-word;
+            }
+          }
+
+          @media(max-width: 1000px){
+            .order-number,
+            .oreder-date,
+            .order-status,
+            .order-total{
+              font-size: 13px;
+            }
+
+            .custom-button{
+              width: 100px;
+              padding: 5px;
+
+              .custom-button-text{
+                font-size: 14px;
+              }
+            }
+          }
+
+          @media(max-width: 500px){
+           .order-number,
+            .oreder-date,
+            .order-status,
+            .order-total{
+              font-size: 10px;
+            }
+
+            .custom-button{
+              width: 50px;
+              padding: 3px;
+
+              .custom-button-text{
+                font-size: 10px;
+              }
+            }
+          }
+        }
+
+        @media(max-width:1100px){
+          td{
+            padding: 5px;
+          }
+        }
+
+        @media(max-width:500px){
+          td{
+            padding: 3px;
+          }
+        }
+      }
+
+      tr::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 85%;
+        border: 2px solid #f1f1f2;
+        border-radius: 5px;
+      }
+
+      tr:last-child::after {
+        display: none;
+      }
+    }
+  }
+}
+
