--- a/public/assets/web/ASSETS_En/css/style.css
+++ b/public/assets/web/ASSETS_En/css/style.css
@@ -1317,7 +1317,7 @@ a.text-brand-3:hover {
   width: 30px;
   background: #ffffff url(../imgs/template/icons/wishlist.svg) no-repeat center;
   padding: 0px;
-  opacity: 0;
+  opacity: 1;
   transform: translateX(10px);
   transition: all 0.2s cubic-bezier(0.28, 0.12, 0.22, 1);
   will-change: opacity, transform;
@@ -1334,7 +1334,7 @@ a.text-brand-3:hover {
   width: 30px;
   background: #ffffff url(../imgs/template/icons/compare.svg) no-repeat center;
   padding: 0px;
-  opacity: 0;
+  opacity: 1;
   transform: translateX(10px);
   transition: all 0.2s cubic-bezier(0.28, 0.12, 0.22, 1);
   will-change: opacity, transform;
@@ -12957,7 +12957,6 @@ a:hover span {
   background: white;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.03);
   border-radius: 12px;
-  overflow: hidden;
   border: 1px #f1f1f2 solid;
   display: inline-flex;
   flex-direction: column;
@@ -12965,6 +12964,58 @@ a:hover span {
   align-items: center;
   height: fit-content;
   padding: 20px;
+  position: relative;
+
+   /* minimize menue button  */
+   .minimize-btn{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(50%, -50%);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px #f1f1f2 solid;
+    cursor: pointer;
+    font-size: 20px;
+    color: #fd9636;
+
+    .fa-chevron-right{
+      transform: scaleX(-1);
+    }
+  }
+}
+
+/* minimize account contaier */
+.minimize-container{
+  width: 100px !important;
+  padding: 5px !important;
+}
+
+.minimize-item{
+  justify-content: center !important;
+}
+
+.minimize-hide{
+  display: none !important;
+}
+
+.account-menue-icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  cursor: pointer;
+}
+
+@media(max-width: 820px){
+  .minimize-btn, .account-menue-icon{
+    display: none !important;
+  }
 }
 
 /* Wrapper Styles */
@@ -13123,11 +13174,14 @@ a:hover span {
   }
 }
 
+.account-profile-content-container{
+  width: calc(100% - 300px);
+}
+
 /* //////////////////////////////////////////////////// */
 /* account dashboard section */
 /* Container Styles */
 .dashboard-container {
-  width: calc(100% - 300px);
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -13202,11 +13256,16 @@ a:hover span {
   text-transform: uppercase;
 }
 
+.minimize-account-profile-content-container{
+  width: calc(100% - 100px) !important;
+}
+
+
+
 /* //////////////////////////////////////// */
 /* account details page */
 /* Container Styles */
 .profile-container {
-  width: calc(100% - 300px);
 
   .inputs-container {
     display: flex;
@@ -13329,7 +13388,6 @@ a:hover span {
 /* ///////////////////////////////////////// */
 /* account address page*/
 .address-contaier {
-  width: calc(100% - 300px);
 
   .addresses-container {
     width: 100%;
@@ -13820,7 +13878,6 @@ a:hover span {
 /* account download page */
 .account-dwonload-container {
   display: grid;
-  width: calc(100% - 300px);
   grid-template-columns: repeat(auto-fit, minmax(335px, 1fr));
   gap: 20px;
 
@@ -13936,7 +13993,6 @@ a:hover span {
 /* ////////////////////////////////////////////////// */
 /* account orders page */
 .account-orders-container {
-  width: calc(100% - 300px);
 
   .orders-table {
     width: 100%;
