--- a/public/assets/web/ASSETS_En/css/style.css
+++ b/public/assets/web/ASSETS_En/css/style.css
@@ -26,10 +26,11 @@ TABLE CONTENT
  WP STYPE
  Custom amine
 ***/
-@import url(https://fonts.bunny.net/css?family=dm-sans:400,500,700|kanit:700);
+@import url("https://fonts.bunny.net/css?family=dm-sans:400,500,700|kanit:700");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 /*import vendors*/
 @import url(../css/vendors/normalize.css);
@@ -39,6 +40,13 @@ TABLE CONTENT
 @import url(../css/plugins/select2.min.css);
 @import url(../css/plugins/slick.css);
 @import url(../css/plugins/animate.min.css);
+/* root variables */
+:root {
+  --color-black: #1d1d1d;
+  --color-lightBlack: #262626;
+  --color-gray: #676767;
+  --color-lightGray: #626262;
+}
 /*RESET*/
 html,
 body,
@@ -108,7 +116,6 @@ details,
 embed,
 figure,
 figcaption,
-footer,
 header,
 hgroup,
 menu,
@@ -142,7 +149,6 @@ aside,
 details,
 figcaption,
 figure,
-footer,
 header,
 hgroup,
 menu,
@@ -157,7 +163,7 @@ body {
   overflow-x: hidden !important; */
 }
 body.dark {
-  background-color: #202124 !important;
+  background-color: var(--color-black) !important;
 }
 
 ol,
@@ -3785,37 +3791,32 @@ a.text-brand-3:hover {
   border-radius: 4px;
 }
 .topbar.dark {
-  background-color: #202124 !important;
+  background-color: var(--color-black) !important;
   color: white;
 }
 body.dark .section-box {
-  background-color: #202124 !important;
+  background-color: var(--color-black) !important;
   color: white !important;
 }
 body.dark .box-newsletter {
-  background-color: #202124 !important;
+  background-color: var(--color-black) !important;
   color: white !important;
   border: 1px solid white;
 }
 body.dark .section-box .box-product-category {
-  background-color: #202124 !important;
+  background-color: var(--color-black) !important;
   color: white !important;
 }
 body.dark .section-box .box-product-category .box-menu-category {
-  background-color: #202124 !important;
+  background-color: var(--color-black) !important;
   color: white !important;
-}
-body.dark .footer-1 {
-  background-color: #202124 !important;
-  color: white !important;
-  border: 1px solid white;
 }
 body.dark header {
-  background-color: #202124 !important;
+  background-color: var(--color-black) !important;
   color: white !important;
 }
 body.dark .bg-dark {
-  background-color: #202124 !important;
+  background-color: var(--color-black) !important;
 }
 /* body.dark .btn-open{
   border: none;
@@ -3834,11 +3835,11 @@ body.dark h6 {
   color: #f6f6f6 !important;
 }
 body.dark .page-link {
-  background-color: #202124;
+  background-color: var(--color-black);
   color: #f6f6f6;
 }
 body.dark .breadcrumbs-div {
-  background-color: #202124;
+  background-color: var(--color-black);
   border: 1px solid white;
 }
 body.dark .btn {
@@ -3872,11 +3873,11 @@ body.dark .dropdown-menu a {
   color: #a6b0cf;
 }
 body.dark .list-col-5 li .item-list:hover {
-  background-color: #202124;
+  background-color: var(--color-black);
   border: 1px solid #8c9ec5;
 }
 body.dark .form-control {
-  background-color: #202124;
+  background-color: var(--color-black);
   color: #fff;
 }
 .menu-topbar-right .dropdown-menu {
@@ -4874,103 +4875,6 @@ body.dark .form-control {
   margin-bottom: 15px;
 }
 
-.footer .icon-socials {
-  display: inline-block;
-  margin-right: 15px;
-  height: 32px;
-  width: 32px;
-  transition-duration: 0.2s;
-}
-.footer .icon-socials:hover {
-  transform: translateY(-3px);
-  transition-duration: 0.2s;
-}
-.footer .icon-socials.icon-facebook {
-  background: url(../imgs/template/icons/facebook-gray.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-.footer .icon-socials.icon-facebook:hover {
-  background: url(../imgs/template/icons/facebook.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-
-.footer .icon-socials.icon-whatsapp {
-  background: url(../imgs/template/icons/facebook-gray.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-.footer .icon-socials.icon-whatsapp:hover {
-  background: url(../imgs/template/icons/facebook.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-
-.footer .icon-socials.icon-twitter {
-  background: url(../imgs/template/icons/twitter-gray.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-.footer .icon-socials.icon-twitter:hover {
-  background: url(../imgs/template/icons/twitter.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-.footer .icon-socials.icon-instagram {
-  background: url(../imgs/template/icons/instagram-gray.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-.footer .icon-socials.icon-instagram:hover {
-  background: url(../imgs/template/icons/instagram.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-.footer .icon-socials.icon-linkedin {
-  background: url(../imgs/template/icons/linkedin-gray.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-.footer .icon-socials.icon-linkedin:hover {
-  background: url(../imgs/template/icons/linkedin.svg) no-repeat 0px 0px;
-  transition-duration: 0.2s;
-}
-.footer .width-20 {
-  width: 20%;
-}
-.footer .width-25 {
-  width: 25%;
-}
-.footer .width-23 {
-  width: 23%;
-}
-.footer .width-16 {
-  width: 16%;
-}
-.footer .menu-footer {
-  display: inline-block;
-}
-.footer .menu-footer li {
-  list-style: none;
-  margin-bottom: 8px;
-}
-.footer .menu-footer li a {
-  color: #425a8b;
-  font-size: 16px;
-  line-height: 24px;
-  text-decoration: none;
-  display: block;
-  background: url(../imgs/template/icons/arrow-gray.svg) no-repeat 0px 6px;
-  padding: 0px 0px 0px 15px;
-  transition-duration: 0.2s;
-}
-.footer .menu-footer li a:hover {
-  color: #0ba9ed;
-  transition-duration: 0.2s;
-  padding-left: 18px;
-}
-.footer .footer-bottom {
-  border-top: 1px solid #cad6ec;
-  padding: 30px 0px;
-  color: #8c9ec5;
-  font-size: 14px;
-}
-.footer .footer-bottom a {
-  text-decoration: none;
-}
-
 #scrollUp {
   width: 42px;
   height: 42px;
@@ -5007,60 +4911,6 @@ body.dark .form-control {
 .menu-bottom li:last-child a {
   padding-right: 0px;
 }
-
-.footer-1 {
-  background-color: #f0f3f8;
-  margin: 0px 0px 50px 0px;
-  padding: 30px 0px 30px 0px;
-}
-
-.footer-2-top a {
-  vertical-align: top;
-  display: inline-block;
-  padding-right: 10px;
-}
-.footer-2-top .font-xs {
-  padding: 32px 12px 0px 12px;
-}
-
-.footer-2-bottom {
-  display: flex;
-  margin-bottom: 20px;
-}
-.footer-2-bottom .head-left-footer {
-  min-width: 95px;
-  vertical-align: top;
-}
-.footer-2-bottom .tags-footer {
-  width: 100%;
-  padding-top: 2px;
-}
-.footer-2-bottom .tags-footer a {
-  color: #425a8b;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16px;
-  display: inline-block;
-  vertical-align: top;
-  padding: 0px 30px 0px 0px;
-  position: relative;
-}
-.footer-2-bottom .tags-footer a::before {
-  content: "";
-  position: absolute;
-  top: 1px;
-  right: 15px;
-  height: 16px;
-  width: 1px;
-  background-color: #8c9ec5;
-}
-.footer-2-bottom .tags-footer a:last-child {
-  padding-right: 0px;
-}
-.footer-2-bottom .tags-footer a:last-child::before {
-  display: none;
-}
-
 /*LAYOUT -> SPACING**/
 .section-padding-30 {
   padding: 30px 0;
@@ -7393,15 +7243,6 @@ body.dark .form-control {
   border-bottom-left-radius: 0px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
-}
-
-.bg-footer-homepage5 .footer-1 {
-  background-color: #fff5db;
-  margin-bottom: 0px;
-}
-.bg-footer-homepage5 .footer-2 {
-  padding-top: 50px;
-  background-color: #f0f3f8;
 }
 
 .sidebar-border .head {
@@ -10420,12 +10261,6 @@ a:hover span {
   }
 }
 @media (max-width: 991.98px) {
-  .footer .width-20 {
-    width: 50%;
-  }
-  .footer .width-16 {
-    width: 50%;
-  }
   .list-products-5 .card-grid-style-3 {
     width: 50%;
   }
@@ -10481,12 +10316,6 @@ a:hover span {
   .banner-img-left {
     padding: 20px 20px 0px 170px;
     height: 225px;
-  }
-  .footer .width-25 {
-    width: 100%;
-  }
-  .footer .width-23 {
-    width: 50%;
   }
   .menu-texts {
     top: 53px;
@@ -10658,15 +10487,6 @@ a:hover span {
   }
 }
 @media (max-width: 767.98px) {
-  .footer .width-20 {
-    width: 100%;
-  }
-  .footer .width-16 {
-    width: 100%;
-  }
-  .footer .width-23 {
-    width: 100%;
-  }
   .burger-icon {
     top: 17px;
   }
@@ -13208,6 +13028,21 @@ a:hover span {
   cursor: pointer;
 }
 
+body.dark .dashboard-container a {
+  border: 1px solid #676767;
+  color: #fff;
+
+  .card {
+    .title {
+      color: #fff !important;
+    }
+
+    .icon svg {
+      fill: #fff !important;
+    }
+  }
+}
+
 .dashboard-container a .card {
   width: 100%;
   background: transparent;
@@ -14228,6 +14063,432 @@ a:hover span {
 
       tr:last-child::after {
         display: none;
+      }
+    }
+  }
+}
+
+
+
+/* app ad */
+.get-app-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #ddd;
+  background-color: white;
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 15px 30px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.sticky-ad{
+  position: fixed;
+  z-index: 100000000000;
+  top: 0px;
+  transition: all 1s ease-in-out;
+}
+.header-under-ad{
+  margin-top: 148px;
+}
+@media(max-width: 767px){
+  .header-under-ad{
+    margin-top: 135px;
+  }
+}
+@media(max-width: 575px){
+  .header-under-ad{
+    margin-top: 125px;
+  }
+}
+@media(max-width: 530px){
+  .header-under-ad{
+    margin-top: 103px;
+  }
+}
+@media(max-width: 438px){
+  .header-under-ad{
+    margin-top: 146px;
+  }
+}
+.logo {
+  width: 50px;
+}
+.lgoo img{
+  width: 100%;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 16px;
+  flex-grow: 1;
+}
+.content h2 {
+  margin: 0;
+  font-size: 16px;
+  color: #333;
+}
+.content p {
+  margin: 4px 0;
+  font-size: 14px;
+  color: #6666669f;
+}
+.rating {
+  display: flex;
+  align-items: center;
+  margin-top: 4px;
+}
+.stars {
+  color: #f1a20f;
+  font-size: 22px;
+  margin-right: 4px;
+  padding-bottom: 6px;
+}
+.button {
+  background-color: #ff7b2c;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  text-wrap: nowrap;
+}
+.close {
+  position: absolute;
+  top: 8px;
+  right: 33px;
+  font-size: 22px;
+  cursor: pointer;
+  color: #ff7b2c;
+}
+
+@media (max-width: 530px) {
+  .get-app-container {
+    padding: 5px;
+  }
+  .content h2,
+  .rating-num {
+    font-size: 14px;
+    text-wrap: wrap;
+  }
+
+  .content p {
+    font-size: 12px;
+    text-wrap: wrap;
+  }
+
+  .stars {
+    font-size: 20px;
+  }
+
+  .button {
+    font-size: 12px;
+  }
+
+  .close{
+      top: 2px;
+      right: 10px;
+  }
+}
+
+
+/* /////////////////////////////////////////////////////////////////// */
+/* footer styles */
+.footer {
+  width: 100%;
+  background-color: #0e224d;
+  color: #fff;
+
+  .container {
+    .footer-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      width: 100%;
+
+      .footer-top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 95%;
+        border-bottom: 1px solid #B4A4A4;
+        padding: 20px 0;
+        padding: 20px;
+
+        .footer-subscribe {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          gap: 20px;
+
+          .subscribe-text {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: start;
+
+            h4 {
+              font-family: "Nunito", sans-serif;
+              font-size: 26px;
+              font-weight: 700;
+              line-height: 39px;
+              text-align: left;
+            }
+
+            span {
+              font-family: "Nunito", sans-serif;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 28px;
+              text-align: left;
+            }
+          }
+
+          .subscribe-search {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #fff;
+            border-radius: 30px;
+            padding: 5px;
+            overflow: hidden;
+
+            input {
+              width: 100%;
+              font-family: "Nunito", sans-serif;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 21.82px;
+              text-align: left;
+              border: none;
+              outline: none;
+              padding: 5px;
+            }
+
+            button {
+              background-color: #fd9636;
+              border: none;
+              outline: none;
+              border-radius: 30px;
+              color: #fff;
+              padding: 5px 15px;
+              font-family: "Nunito", sans-serif;
+              font-size: 20px;
+              font-weight: 400;
+              line-height: 30px;
+              text-align: center;
+            }
+          }
+        }
+
+        .subscribe-download-app {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 15px;
+
+          .download-text {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: start;
+
+            h4 {
+              font-family: "Nunito", sans-serif;
+              font-size: 26px;
+              font-weight: 700;
+              line-height: 39px;
+              text-align: left;
+            }
+
+            span {
+              font-family: "Nunito", sans-serif;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 28px;
+              text-align: left;
+            }
+          }
+
+          .download-image{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: start;
+
+          }
+        }
+      }
+
+      /* footer-body */
+      .footer-body{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px 0;
+        width: 100%;
+
+        .footer-aboout-us{
+          display: flex;
+          flex-direction: column;
+          width: 20%;
+
+          h4{
+            font-family: "Nunito", sans-serif;
+            font-size: 26px;
+            font-weight: 700;
+            line-height: 39px;
+            text-align: left;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            span{
+              width: 20%;
+              border-bottom: 3px solid #AD8C5C;
+              padding: 5px ;
+            }
+          }
+
+          p{
+            font-family: "Nunito", sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 28px;
+            text-align: left;
+            color: #B4A4A4;
+            margin-top: 10px;
+          }
+
+          .about-email, .about-phone{
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            gap: 5px;
+
+            i{
+              color: #FD9636;
+            }
+
+            span{
+              font-family: "Nunito", sans-serif;
+              font-size: 20px;
+              font-weight: 400;
+              line-height: 35px;
+              text-align: left;
+            }
+          }
+        }
+
+        .footer-logo{
+          border: 2px solid #B4A4A4;
+          border-radius: 10px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 35%;
+          flex-direction: column;
+          padding: 20px 0;
+          gap: 10px;
+
+          .footer-follow{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            border-bottom: 1px solid #B4A4A4;
+
+            span{
+              font-family: "Nunito", sans-serif;
+              font-size: 20px;
+              font-weight: 400;
+              line-height: 24px;
+              text-align: left;
+              color: #B4A4A4;
+            }
+
+            .follow-icons{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              gap: 8px;
+              padding: 10px 0;
+
+              i{
+                color: #FD9636;
+                font-size: 20px;
+                cursor: pointer;
+              }
+            }
+          }
+          
+        }
+
+        .footer-account{
+          width: 20%;
+          display: flex;
+          flex-direction: column;
+
+          h4{
+            font-family: "Nunito", sans-serif;
+            font-size: 26px;
+            font-weight: 700;
+            line-height: 39px;
+            text-align: left;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            span{
+              width: 20%;
+              border-bottom: 3px solid #AD8C5C;
+              padding: 5px ;
+            }
+          }
+
+          ul{
+            margin-top: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 10px;
+
+            li{
+              font-family: "Nunito", sans-serif;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 24px;
+              text-align: left;
+              color: #B4A4A4;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+
+      .footer-bottom{
+        width: 95%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-top: 1px solid #B4A4A4;
+        padding: 20px;
+
+        .bottom-text{
+          display: flex;
+          align-items: center;
+          justify-content: start;
+          gap: 10px;
+
+          div{
+            font-family: "Nunito", sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 28px;
+            text-align: left;
+          }
+        }
       }
     }
   }
