--- a/public/assets/web/ASSETS_En/css/style.css
+++ b/public/assets/web/ASSETS_En/css/style.css
@@ -46,6 +46,7 @@ TABLE CONTENT
   --color-lightBlack: #262626;
   --color-gray: #676767;
   --color-lightGray: #626262;
+  --color-orange: #FD9636;
 }
 /*RESET*/
 html,
@@ -7924,6 +7925,10 @@ body.dark .form-control {
   background-size: cover;
 }
 
+body.dark .box-slider-product{
+  border-color: var(--color-gray) !important;
+}
+
 .title-border-bottom {
   position: relative;
   padding-bottom: 10px;
@@ -11505,6 +11510,12 @@ a:hover span {
   color: #fd9636 !important;
 }
 
+body.dark .order_status {
+  .title {
+    color: #fff;
+  }
+}
+
 /* cart items */
 
 .cartItems {
@@ -11551,6 +11562,16 @@ a:hover span {
   padding: 5px;
 }
 
+.cartItems .items .item .leftButtons .upBTNs .fa-trash-alt {
+  color: #ff1212;
+  font-size: 18px;
+}
+
+.cartItems .items .item .leftButtons .upBTNs .fa-heart {
+  color: #9098b1;
+  font-size: 18px;
+}
+
 .cartItems .items .item .leftButtons .input-quantity {
   border: 1px solid #ebf0ff;
   box-shadow: 0px 1px 2px 0px #00000040;
@@ -11561,14 +11582,14 @@ a:hover span {
 }
 
 .cartItems .items .item .leftButtons .input-quantity .plus-cart {
-  color: #fd9636;
+  color: #fd9636 !important;
   padding: 5px;
   width: 30px;
   text-align: center;
 }
 
 .cartItems .items .item .leftButtons .input-quantity input {
-  color: #fd9636;
+  color: #fd9636 !important;
   background-color: #ebf0ff;
   padding: 5px;
   width: 30px;
@@ -11579,7 +11600,7 @@ a:hover span {
 }
 
 .cartItems .items .item .leftButtons .input-quantity .minus-cart {
-  color: #9098b1;
+  color: #9098b1 !important;
   padding: 5px;
   width: 30px;
   text-align: center;
@@ -11791,6 +11812,46 @@ a:hover span {
   color: #ffffff;
 }
 
+body.dark .cartItems {
+  .item {
+    border: 1px solid var(--color-gray) !important;
+  }
+
+  .cat {
+    color: var(--color-lightGray) !important;
+  }
+
+  .price {
+    color: #fd9636 !important;
+  }
+
+  .input-quantity {
+    border: 1px solid var(--color-gray) !important;
+  }
+
+  .input-quantity input {
+    background-color: var(--color-lightBlack) !important;
+    color: #fff !important;
+  }
+
+  .checkout .save-on .save-on-input .input-section input {
+    background: transparent !important;
+    color: #fff !important;
+  }
+
+  .checkout label {
+    color: #fff !important;
+  }
+
+  .checkout .checkoutContent .total div:nth-child(1) span {
+    color: #fd9636 !important;
+  }
+
+  .checkout .checkoutContent .total div:nth-child(2) span {
+    color: #ff1212 !important;
+  }
+}
+
 @media (max-width: 992px) {
   .cartItems {
     flex-direction: column;
@@ -11999,6 +12060,36 @@ a:hover span {
   direction: ltr;
 }
 
+body.dark .changeLocation{
+  border: 1px solid var(--color-gray);
+
+  div .locationDec p{
+    color: #fff !important;
+  }
+}
+
+body.dark .addLocation{
+
+  .LocationLine{
+    border-top: 1px solid var(--color-gray) !important;
+  }
+
+  .location-form-group > input, .checkoutButtons .left{
+    border: 1px solid var(--color-gray) !important;
+  }
+
+  .location-form-group > label{
+    background-color: var(--color-black) !important;
+    padding: 0 2px;
+    color: #fff !important;
+  }
+
+  .location-form-group > label span{
+    color: #ff1212 !important;
+  }
+
+}
+
 @media (max-width: 997px) {
   .changeLocation {
     width: 90%;
@@ -12140,6 +12231,27 @@ a:hover span {
   font-size: 18px;
   font-weight: 400;
   line-height: 36.85px;
+}
+
+body.dark .payments{
+  h4{
+    color: #FD9636 !important;
+  }
+
+  .payment-methods .method{
+    background-color: var(--color-lightBlack);
+    border-color: var(--color-gray);
+  }
+
+  .payment-methods .method.opened{
+    background: #FD96361A !important;
+    border: 2px solid #F36621 !important;
+  }
+}
+
+body.dark .choosed-method{
+  color: #fff !important;
+  border-color: var(--color-gray);
 }
 
 /*************** receipt page  ***********/
@@ -12437,6 +12549,51 @@ a:hover span {
   font-weight: 400;
 }
 
+body.dark .shipping-details{
+  border-color: var(--color-gray) !important;
+
+  .details-section-title{
+    border-color: var(--color-gray) !important;
+  }
+}
+
+body.dark .order-table{
+  border-color: var(--color-gray) !important;
+
+  .tableRow.head{
+    border-color: var(--color-gray) !important;
+  }
+
+  .tableRow div{
+    color: #fff !important;
+  }
+
+  .tableRow div:nth-child(1) .order-info div:nth-child(1), .tableRow div:nth-child(4){
+    color: #fd9636 !important;
+  }
+}
+
+body.dark .order-summary{
+  background: var(--color-lightBlack) !important;
+
+  .typography{
+    background: var(--color-lightGray);
+  }
+
+  .circle{
+    background: var(--color-black) !important;
+  }
+
+  .dashed-line{
+    border-color: var(--color-lightGray) !important;
+  }
+
+  .content .ammount div:nth-child(1) span:nth-child(2) {
+    color: #fd9636 !important;
+  }
+
+}
+
 @media (max-width: 994px) {
   .shipping-details,
   .order-table,
@@ -12596,7 +12753,7 @@ a:hover span {
 }
 
 .dropdown-cart .items .item .leftButtons .input-quantity .plus-cart {
-  color: #fd9636;
+  color: #fd9636 !important;
   padding: 2px;
   width: 30px;
   text-align: center;
@@ -12616,7 +12773,7 @@ a:hover span {
 }
 
 .dropdown-cart .items .item .leftButtons .input-quantity .minus-cart {
-  color: #9098b1;
+  color: #9098b1 !important;
   padding: 2px;
   width: 30px;
   text-align: center;
@@ -12651,6 +12808,7 @@ a:hover span {
     font-family: Cairo;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -12743,6 +12901,38 @@ a:hover span {
   }
 }
 
+body.dark .dropdown-cart{
+  background: var(--color-lightBlack) !important;
+  border-color: var(--color-gray) !important;
+
+  .cart-title svg path, .cart-title span{
+    color: var(--color-orange) !important;
+    fill: var(--color-orange) !important;
+  }
+
+  .item, .input-quantity, .cart-total{
+    border-color: var(--color-gray) !important;
+  }
+  
+
+  .price{
+    color: var(--color-orange) !important;
+  }
+
+  .cat{
+    color: var(--color-lightGray) !important;
+  }
+
+  .input-quantity input {
+    background-color: var(--color-gray) !important;
+  }
+
+  .continu-shopping{
+    color: #fff !important;
+  }
+
+}
+
 /* /////////////////////////////////////////////////////////////////////// */
 /* account sidebar section */
 /* Container Styles */
@@ -12807,6 +12997,49 @@ a:hover span {
     .fa-chevron-right{
       transform: scaleX(-1);
     }
+  }
+}
+
+body.dark .account-container {
+  background-color: var(--color-lightBlack);
+  border: 1px solid var(--color-gray);
+
+  .header-title{
+    color: #fff;
+  }
+
+  .account-item {
+    background-color: var(--color-gray);
+    border: 1px solid var(--color-gray);
+  }
+
+  .account-item.active {
+    background: #fd9636;
+  }
+
+  .account-item:hover {
+    background: #fd9636cc;
+  }
+
+  .minimize-btn {
+    background-color: var(--color-lightBlack);
+    border: 1px solid var(--color-gray);
+  }
+
+  .account-item .item-title {
+    color: #fff !important;
+  }
+
+  .account-menue-icon svg path {
+    stroke: #fff;
+  }
+
+  .dashboard-icons svg {
+    fill: #fff;
+  }
+
+  .separator {
+    border-bottom: 1px var(--color-gray) solid;
   }
 }
 
@@ -12994,6 +13227,16 @@ a:hover span {
   }
 }
 
+body.dark .account-content .modal{
+  .modal-content{
+    background-color: var(--color-lightBlack);
+  }
+
+  button{
+    color: #fff !important;
+  }
+}
+
 .account-profile-content-container{
   width: calc(100% - 300px);
 }
@@ -13143,7 +13386,6 @@ body.dark .dashboard-container a {
         right: 21px;
         top: -16px;
         width: fit-content;
-        background-color: transparent;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -13199,6 +13441,29 @@ body.dark .dashboard-container a {
 
   .button-text:hover {
     background: #ffa54a;
+  }
+}
+
+body.dark .profile-container{
+  .inputs-container{
+    .input-content{
+      .label{
+        background: var(--color-black);
+    
+        .text{
+          color: #fff;
+        }
+
+        .required{
+          color: #FF1212 !important;
+        }
+      }
+
+      input, select{
+        color: #fff;
+        background: var(--color-black);
+      }
+    }
   }
 }
 
@@ -13709,6 +13974,32 @@ body.dark .dashboard-container a {
   }
 }
 
+body.dark .address-contaier{
+  .addres-item{
+    border: 1px solid var(--color-gray);
+  }
+
+  .delivery-title, .delivery-address, .check-lable{
+    color: #fff !important;
+  }
+
+  .dot{
+    background-color: #fff !important;
+  }
+
+  .label{
+    background: var(--color-black) !important;
+
+    .text{
+      color: #fff !important;
+    }
+
+    .required{
+      color: #FF1212 !important;
+    }
+  }
+}
+
 /* //////////////////////////////////////// */
 /* account download page */
 .account-dwonload-container {
@@ -14068,8 +14359,39 @@ body.dark .dashboard-container a {
   }
 }
 
+body.dark .account-orders-container {
+  .orders-table {
+    border: 1px solid var(--color-gray);
+  }
+
+  tbody {
+    border-top: 1px solid var(--color-gray);
+  }
+
+  th,
+  .order-status,
+  .order-number,
+  .order-date {
+    color: #fff !important;
+  }
+
+  tr::after {
+    border: 2px solid var(--color-gray);
+  }
+
+  tr {
+    td {
+      .order-total {
+        span:nth-child(2) {
+          color: var(--color-lightGray) !important;
+        }
+      }
+    }
+  }
+}
 
 
+/* /////////////////////////////////////////// */
 /* app ad */
 .get-app-container {
   display: flex;
@@ -14117,18 +14439,18 @@ body.dark .dashboard-container a {
 .lgoo img{
   width: 100%;
 }
-.content {
+.get-app-container .content {
   display: flex;
   flex-direction: column;
   margin-left: 16px;
   flex-grow: 1;
 }
-.content h2 {
+.get-app-container .content h2 {
   margin: 0;
   font-size: 16px;
   color: #333;
 }
-.content p {
+.get-app-container .content p {
   margin: 4px 0;
   font-size: 14px;
   color: #6666669f;
