--- a/public/assets/web/ASSets_Ar/css/STYLEAR12.css
+++ b/public/assets/web/ASSets_Ar/css/STYLEAR12.css
@@ -11968,6 +11968,12 @@ a:hover span {
   direction: ltr;
 }
 
+@media (max-width: 770px) {
+  .order_status {
+    width: 90%;
+  }
+}
+
 .order_status .order_status_item {
   width: 10%;
   margin: 0 auto;
@@ -12108,6 +12114,17 @@ a:hover span {
 
 .cartItems .items .item .itemInfo img {
   width: 100px;
+  padding: 3px;
+  border-radius: 10px;
+  min-width: 170px !important;
+}
+
+@media (max-width: 500px) {
+  .cartItems .items .item .itemInfo img {
+    width: 94px;
+    height: 94px;
+    min-width: 94px !important;
+  }
 }
 
 .cartItems .items .item .itemInfo .info {
@@ -12132,6 +12149,13 @@ a:hover span {
   font-size: 15px;
   margin-top: 20px;
   font-weight: bold;
+}
+
+@media (max-width: 500px) {
+  .cartItems .items .item .itemInfo .info .price {
+    font-size: 14px;
+    margin-top: 14px;
+  }
 }
 
 /* checkout */
@@ -12327,7 +12351,8 @@ a:hover span {
   }
 
   .cartItems .items .item .itemInfo .info h4 {
-    font-size: 10px !important;
+    font-size: 12px !important;
+    line-height: 22.49px;
   }
 }
 
@@ -12654,6 +12679,30 @@ a:hover span {
   font-size: 18px;
   font-weight: 400;
   line-height: 36.85px;
+}
+
+@media (max-width: 500px) {
+  .payments {
+    width: 100%;
+  }
+  .payments .payment-methods {
+    grid-auto-flow: row;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  
+  }
+
+  .payments .payment-methods .pay-now{
+    padding: 20px 30px;
+  }
+
+  .payments .payment-methods .installment {
+    padding: 20px 40px;
+  }
+
+  .methods{
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 
 /*************** receipt page  ***********/
@@ -13156,16 +13205,16 @@ a:hover span {
 
 .dropdown-cart .items .item .itemInfo .info .title {
   color: #000;
-    font-size: 12px !important;
-    text-align: right;
-    text-transform: capitalize;
-    font-weight: 500;
-    font-family: Cairo;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  font-size: 12px !important;
+  text-align: right;
+  text-transform: capitalize;
+  font-weight: 500;
+  font-family: Cairo;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .dropdown-cart .items .item .itemInfo .info .cat {
@@ -13280,7 +13329,6 @@ a:hover span {
   }
 }
 
-
 .account-container {
   width: 270px;
   background: white;
@@ -13296,8 +13344,8 @@ a:hover span {
   padding: 20px;
   position: relative;
 
-   /* minimize menue button  */
-   .minimize-btn{
+  /* minimize menue button  */
+  .minimize-btn {
     position: absolute;
     top: 50%;
     left: 0;
@@ -13317,34 +13365,35 @@ a:hover span {
 }
 
 /* minimize account contaier */
-.minimize-container{
-width: 100px !important;
-padding: 5px !important;
+.minimize-container {
+  width: 100px !important;
+  padding: 5px !important;
 }
 
-.minimize-item{
-justify-content: center !important;
+.minimize-item {
+  justify-content: center !important;
 }
 
-.minimize-hide{
-display: none !important;
-}
-
-.account-menue-icon{
-display: flex;
-align-items: center;
-justify-content: center;
-width: 100%;
-cursor: pointer;
-}
-.account-menue-icon svg{
-transform: scalex(-1);
-}
-
-@media(max-width: 820px){
-.minimize-btn, .account-menue-icon{
+.minimize-hide {
   display: none !important;
 }
+
+.account-menue-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  cursor: pointer;
+}
+.account-menue-icon svg {
+  transform: scalex(-1);
+}
+
+@media (max-width: 820px) {
+  .minimize-btn,
+  .account-menue-icon {
+    display: none !important;
+  }
 }
 
 /* Wrapper Styles */
@@ -13856,14 +13905,14 @@ transform: scalex(-1);
             text-wrap: nowrap;
           }
 
-          @media(max-width:900px){
-            .change-location-text{
+          @media (max-width: 900px) {
+            .change-location-text {
               font-size: 14px;
             }
           }
 
-          @media(max-width:450px){
-            .change-location-text{
+          @media (max-width: 450px) {
+            .change-location-text {
               font-size: 12px;
             }
           }
@@ -13888,8 +13937,8 @@ transform: scalex(-1);
         }
       }
 
-      @media(max-width:900px){
-        .right{
+      @media (max-width: 900px) {
+        .right {
           gap: 10px;
         }
       }
@@ -13929,27 +13978,27 @@ transform: scalex(-1);
             padding-left: 5px;
             display: -webkit-box;
             -webkit-line-clamp: 2;
-            line-clamp: 2 ;
+            line-clamp: 2;
             -webkit-box-orient: vertical;
             box-orient: vertical;
           }
 
-          @media(max-width:900px){
+          @media (max-width: 900px) {
             .delivery-title {
               font-size: 15px;
             }
 
-            .delivery-address{
+            .delivery-address {
               font-size: 13px;
             }
           }
 
-          @media(max-width:450px){
+          @media (max-width: 450px) {
             .delivery-title {
               font-size: 13px;
             }
 
-            .delivery-address{
+            .delivery-address {
               font-size: 10px;
             }
           }
@@ -13963,15 +14012,15 @@ transform: scalex(-1);
           align-items: center;
           justify-content: center;
 
-          @media(max-width: 800px){
-            svg{
+          @media (max-width: 800px) {
+            svg {
               width: 28px !important;
               height: 28px !important;
             }
           }
 
-          @media(max-width: 450px){
-            svg{
+          @media (max-width: 450px) {
+            svg {
               width: 23px !important;
               height: 23px !important;
             }
@@ -13979,8 +14028,8 @@ transform: scalex(-1);
         }
       }
 
-      @media(max-width:900px){
-        .left{
+      @media (max-width: 900px) {
+        .left {
           gap: 10px;
         }
       }
@@ -14112,8 +14161,8 @@ transform: scalex(-1);
           }
         }
 
-        @media(max-width: 930px){
-          .input-content{
+        @media (max-width: 930px) {
+          .input-content {
             width: 100%;
             max-width: 100%;
           }
@@ -14177,8 +14226,8 @@ transform: scalex(-1);
       margin-top: 30px;
       direction: ltr;
 
-      @media(max-width: 920px){
-        button{
+      @media (max-width: 920px) {
+        button {
           margin: 0 auto;
         }
       }
@@ -14335,16 +14384,15 @@ transform: scalex(-1);
           color: #0e224d;
         }
 
-        @media(max-width: 1000px){
-          th{
+        @media (max-width: 1000px) {
+          th {
             padding: 10px 0;
             font-size: 14px;
-
           }
         }
 
-        @media(max-width: 500px){
-          th{
+        @media (max-width: 500px) {
+          th {
             padding: 5px 0;
             font-size: 12px;
           }
@@ -14389,41 +14437,41 @@ transform: scalex(-1);
             }
           }
 
-          @media(max-width:1100px){
-            .images-container{
+          @media (max-width: 1100px) {
+            .images-container {
               width: 100px;
               height: 100px;
             }
           }
 
-          @media(max-width:500px){
-            .images-container{
+          @media (max-width: 500px) {
+            .images-container {
               width: 70px;
               height: 70px;
             }
           }
 
-          .two-images, .three-images {
+          .two-images,
+          .three-images {
             grid-template-columns: 1fr 1fr;
             vertical-align: middle;
           }
 
-          .three-images .image-wrapper:last-child{
+          .three-images .image-wrapper:last-child {
             display: none;
           }
-          
-          
+
           .four-images {
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr 1fr;
           }
 
-          .image-wrapper{
+          .image-wrapper {
             position: relative;
           }
-          
+
           .three-images .image-wrapper:nth-child(2)::before,
-          .four-images .image-wrapper:nth-child(4)::before{
+          .four-images .image-wrapper:nth-child(4)::before {
             content: "+1";
             color: #fff;
             position: absolute;
@@ -14489,51 +14537,51 @@ transform: scalex(-1);
             }
           }
 
-          @media(max-width: 1000px){
+          @media (max-width: 1000px) {
             .order-number,
             .oreder-date,
             .order-status,
-            .order-total{
+            .order-total {
               font-size: 13px;
             }
 
-            .custom-button{
+            .custom-button {
               width: 100px;
               padding: 5px;
 
-              .custom-button-text{
+              .custom-button-text {
                 font-size: 14px;
               }
             }
           }
 
-          @media(max-width: 500px){
-           .order-number,
+          @media (max-width: 500px) {
+            .order-number,
             .oreder-date,
             .order-status,
-            .order-total{
+            .order-total {
               font-size: 10px;
             }
 
-            .custom-button{
+            .custom-button {
               width: 50px;
               padding: 3px;
 
-              .custom-button-text{
+              .custom-button-text {
                 font-size: 10px;
               }
             }
           }
         }
 
-        @media(max-width:1100px){
-          td{
+        @media (max-width: 1100px) {
+          td {
             padding: 5px;
           }
         }
 
-        @media(max-width:500px){
-          td{
+        @media (max-width: 500px) {
+          td {
             padding: 3px;
           }
         }
@@ -14556,7 +14604,6 @@ transform: scalex(-1);
     }
   }
 }
-
 
 /* /////////////////////////////////////////////////////////////////// */
 /* footer styles */
