--- a/public/assets/web/ASSets/css/header.css
+++ b/public/assets/web/ASSets/css/header.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* ///////////////////////////////// */
 /* topbar */
 .topbar {
@@ -42,8 +42,8 @@
         .switch {
           position: relative;
           display: inline-block;
-          width: 60px;
-          height: 34px;
+          width: 50px;
+          height: 23px;
 
           input {
             opacity: 0;
@@ -66,10 +66,10 @@
           .slider:before {
             position: absolute;
             content: "";
-            height: 26px;
-            width: 26px;
-            left: 4px;
-            bottom: 4px;
+            height: 19px;
+            width: 19px;
+            left: 3px;
+            bottom: 2px;
             background-color: #fbaf1d;
             -webkit-transition: 0.4s;
             transition: 0.4s;
@@ -213,7 +213,7 @@
               display: flex;
               align-items: center;
               justify-content: center;
-              gap: 15px;
+              gap: clamp(5px, 0.78125vw, 15px);
 
               .sep-line {
                 border-right: 1px solid #fd9636;
@@ -223,13 +223,14 @@
 
               li {
                 a {
-                  font-family: Montserrat;
-                  font-size: 14px;
+                  font-family: "Montserrat", serif;
+                  font-size: clamp(10px, 0.7291666666666666vw, 14px);
                   font-weight: 700;
                   line-height: 24px;
                   letter-spacing: 0.20000000298023224px;
                   text-align: center;
                   color: #737373;
+                  text-wrap: nowrap;
                 }
 
                 .active {
@@ -245,21 +246,182 @@
                     background: transparent;
                     border: none;
                     outline: none;
-                    font-family: Montserrat;
-                    font-size: 14px;
+                    font-family: "Montserrat", serif;
+                    font-size: clamp(10px, 0.7291666666666666vw, 14px);
                     font-weight: 700;
                     line-height: 24px;
                     letter-spacing: 0.20000000298023224px;
                     text-align: center;
                     color: #737373 !important;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: clamp(5px, 0.5208333333333333vw, 10px);
+
+                    svg {
+                      width: clamp(10px, 0.7291666666666666vw, 14px);
+                    }
                   }
 
                   .dropdown-toggle::after {
                     display: none;
                   }
+
+                  .dropdown-menu.show{
+                    display: flex;
+                    align-items: start;
+                    justify-content: start;
+                    flex-direction: column;
+                    width: clamp( 200px, 21.40625vw, 411px);
+                    border-radius: 12px;
+                    padding: 10px 0;
+
+                    a{
+                      display: flex;
+                      align-items: center;
+                      justify-content: start;
+                      gap: 10px;
+                      font-family: Alexandria;
+                      font-size: clamp( 10px, 0.7291666666666666vw, 14px);
+                      font-weight: 700;
+                      line-height: 24px;
+                      letter-spacing: 0.20000000298023224px;
+                      color: #000;
+                      padding: 15px 20px;
+                    }
+
+                    .dropLine{
+                      width: 100%;
+                      border: 1px solid #F1F1F2;
+                    }
+                  }
                 }
               }
             }
+          }
+        }
+
+        .header-search {
+          width: 35%;
+
+          .box-header-search,
+          .mobile-box-header-search {
+            border-radius: 8px;
+            border: 1px solid #FD9636;
+            overflow: hidden;
+            padding: 0;
+
+            .form-search,
+            .mobile-form-search {
+              display: flex;
+              align-items: center;
+              gap: 10px;
+
+              .sep-line{
+                border-right: 1px solid #fd9636;
+                width: 1px;
+                height: 26px;
+              }
+
+              .search-icon{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background: #fd9636;
+                height: 44px;
+
+                button{
+                  border: none;
+                  outline: none;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  width: 42px;
+                  height: 100%;
+                  background: transparent;
+                }
+              }
+            }
+
+            .box-keysearch,
+            .mobile-box-keysearch {
+              width: 100%;
+            }
+
+            .box-keysearch input,
+            .mobile-box-keysearch input {
+              border: 0px !important;
+            }
+  
+            .box-category,
+            .mobile-box-category {
+              position: relative;
+              margin-right: 15px;
+              min-width: 120px;
+
+              select
+             {
+              height: 100%;
+              width: 100%;
+              border: 0px;
+              padding: 0px 20px 0px 5px;
+              border-radius: 8px;
+              -webkit-appearance: none;
+              -moz-appearance: none;
+              appearance: none;
+              background-image: url(../imgs/template/arrow-down.svg);
+              background-position: right center;
+              background-repeat: no-repeat;
+            }
+            }
+            .box-category::before,
+            .mobile-box-category::before {
+              content: "";
+              height: 14px;
+              width: 1px;
+              background-color: #ebf0f3;
+              position: absolute;
+              top: 8px;
+              right: -14px;
+            }
+             
+
+          }
+
+        }
+
+        @media (max-width: 1199.98px) {
+          .header .main-header .header-left .header-search {
+            width: 65%;
+          }
+        }
+
+        @media (max-width: 575.98px) {
+          .header .main-header .header-left .header-search {
+            display: none;
+          }
+        }
+
+        @media (max-width: 1000px) {
+          .header .main-header .header-left .header-search {
+            width: 50%;
+          }
+        }
+        @media (max-width: 720px) {
+          .header .main-header .header-left .header-search {
+            width: 35%;
+          }
+        }
+
+        @media (max-width: 575px) {
+          .mobile-header-search {
+            display: flex !important;
+            width: 90% !important;
+            margin: 0 auto;
+          }
+          .mobile-box-header-search {
+            width: 100%;
+            margin-top: 15px;
           }
         }
 
@@ -388,7 +550,7 @@
               gap: 8px;
               width: clamp(274px, 15.104166666666666vw, 290px);
               padding: clamp(6px, 2.2395833333333335vw, 43px)
-              clamp(14px, 0.7291666666666666vw, 14px);
+                clamp(14px, 0.7291666666666666vw, 14px);
 
               button.userItem {
                 display: flex;
@@ -785,7 +947,7 @@
   }
 }
 
-.rtl .cartSvg{
+.rtl .cartSvg {
   transform: rotatey(180deg);
   z-index: 1;
 }
