--- a/public/assets/web/ASSETS_En/css/STYLEeN9.css
+++ b/public/assets/web/ASSETS_En/css/STYLEeN9.css
@@ -3249,10 +3249,10 @@ a.text-brand-3:hover {
   width: 45%;
   text-align: center;
 }
-.header .main-header .header-left .header-search {
+/* .header .main-header .header-left .header-search {
   width: 35%;
-}
-.header .main-header .header-left .header-search .box-header-search,
+} */
+/* .header .main-header .header-left .header-search .box-header-search,
 .mobile-box-header-search {
   border-radius: 8px;
   border: 1px solid #d5dfe4;
@@ -3331,7 +3331,7 @@ a.text-brand-3:hover {
   background-image: url(../imgs/template/arrow-down.svg);
   background-position: right center;
   background-repeat: no-repeat;
-}
+} */
 /* header-shop section */
 .header .main-header .header-left .header-shop {
     .icon-list {
@@ -10208,12 +10208,12 @@ a:hover span {
   .header .main-header .header-left .header-nav {
     width: 0%;
   }
-  .header .main-header .header-left .header-search {
+  /* .header .main-header .header-left .header-search {
     width: 65%;
-  }
-  .header .burger-icon {
-    /* display: block; */
-  }
+  } */
+  /* .header .burger-icon {
+    display: block;
+  } */
   .box-count.box-count-square .deals-countdown {
     padding: 4px 0px;
   }
@@ -10780,9 +10780,9 @@ a:hover span {
   .swiper-button-prev-style-2 {
     display: block;
   }
-  .header .main-header .header-left .header-search {
+  /* .header .main-header .header-left .header-search {
     display: none;
-  }
+  } */
   .header .container {
     max-width: 100%;
   }
@@ -11384,21 +11384,21 @@ a:hover span {
 }
 
 /* responsive sersh box form mobile view */
-@media (max-width: 1000px) {
+/* @media (max-width: 1000px) {
   .header .main-header .header-left .header-search {
     width: 50%;
   }
-}
+} */
 @media (max-width: 720px) {
-  .header .main-header .header-left .header-search {
+  /* .header .main-header .header-left .header-search {
     width: 35%;
-  }
+  } */
   a[class="btn btn-whatsapp"] {
     display: none;
   }
 }
 
-@media (max-width: 575px) {
+/* @media (max-width: 575px) {
   .mobile-header-search {
     display: flex !important;
     width: 90% !important;
@@ -11408,7 +11408,7 @@ a:hover span {
     width: 100%;
     margin-top: 15px;
   }
-}
+} */
 /* banners section in mobile view */
 @media (max-width: 991px) {
   .swiper-slide a .banner-middle {
